added progress steps

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Scripts</h1>
         <a href="html/expandingCards.html"><input type="submit" value="expanding cards"></a>
+        <a href="html/progressSteps.html"><input type="submit" value="progress steps"></a>
     </body>
 </html>
